RESOLVED FIXED265986
Fix break with LAYER_BASED_SVG_ENGINE disabled after 271550@main
https://bugs.webkit.org/show_bug.cgi?id=265986
Summary Fix break with LAYER_BASED_SVG_ENGINE disabled after 271550@main
Yousuke Kimoto
Reported 2023-12-07 01:03:58 PST
A build break happens with LAYER_BASED_SVG_ENGINE disabled after 271550@main. > UNUSED_PARAM(context); "context" doesn't exist in RenderSVGInline::rectsForRepaintingAfterLayout(), then a compiling error happens.
Attachments
Yousuke Kimoto
Comment 1 2023-12-07 01:26:05 PST
EWS
Comment 2 2023-12-08 18:00:04 PST
Committed 271775@main (4b8a40f948e6): <https://commits.webkit.org/271775@main> Reviewed commits have been landed. Closing PR #21431 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-12-08 18:01:25 PST
Note You need to log in before you can comment on or make changes to this bug.