Fix break with LAYER_BASED_SVG_ENGINE disabled after 271550@main https://bugs.webkit.org/show_bug.cgi?id=265986

Reviewed by Don Olmstead.

"context" in RenderSVGInline::rectsForRepaintingAfterLayout() is no longer used.
To fix the build break, deleting the line.

* Source/WebCore/rendering/svg/RenderSVGInline.cpp: deleted a line that uses "context".
(WebCore::RenderSVGInline::clippedOverflowRect const):

Canonical link: https://commits.webkit.org/271775@main